tests/paczka1/small_fuzzy/90011270.err
Error in line 8: UMSfyO0ATrt A393 -1,5
Error in line 10: A393 A879 82,5
